# synthetic-data-platform

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: architecture.md  decisions.md
docs/adr/: ADR-001-uso-sdv.md  ADR-002-uso-poetry.md  ADR-003-uso-jupyter-notebooks.md  ADR-004-adocao-de-adrs-individuais.md
notebooks/: 01_data_analysis.ipynb  01_data_preparation.ipynb
